--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ wasm-bindgen = "0.2.84"
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
 meval = "0.2.0"
+gloo = "0.11.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
